Move business logic to own module

--- a/lib/isitstillsnowing_web/templates/page/index.html.eex
+++ b/lib/isitstillsnowing_web/templates/page/index.html.eex
@@ -1,8 +1,14 @@
 <div class="heading-wrapper">
-  <%= if @snowing != nil do %>
+  <%= if @snowing === true do %>
     <h1 class="heading">Yep</h1>
-  <% else %>
+  <% end %>
+
+  <%= if @snowing === false do %>
     <h1 class="heading">Nope</h1>
+  <% end %>
+
+  <%= if @snowing === nil do %>
+    <h1 class="heading">Maybe</h1>
   <% end %>
 </div>
 
